feat: add more swagger docs
