# api/handlers/servers.go
@@ -45,14 +45,14 @@ func (h *ServerHandler) Register(g *echo.Group) {
 // WakeServer godoc
 //
 //	@Summary		Wake a server using a mac and a broadcast address
-//	@Description	Wake a server using Wake on LAN
+//	@Description	Wake a server using Wake on LAN using the mac and broadcast address provided
 //	@Tags			servers
 //	@Accept			json
 //	@Produce		json
 //	@Param			wakeServerRequest	body		WakeServerRequest	true	"Wake server request"
-//	@Success		201					{object}	Response
-//	@Failure		400					{object}	Response
-//	@Failure		500					{object}	Response
+//	@Success		201					{object}	Response			"Wake on LAN packet sent"
+//	@Failure		400					{object}	Response			"Input validation failed"
+//	@Failure		500					{object}	Response			"Wake on LAN packet failed to send"
 //	@Router			/servers/wake [post]
 func (h *ServerHandler) WakeServer(c echo.Context) error {
 	wsRequest := NewWakeServerRequest()
@@ -79,15 +79,15 @@ func (h *ServerHandler) WakeServer(c echo.Context) error {
 
 // BroadcastWakeServer godoc
 //
-//	@Summary		Wake a server using just a mac (broadcast is enumerated)
-//	@Description	Wake a server using Wake on LAN
+//	@Summary		Wake a server using just a mac
+//	@Description	Wake a server using Wake on LAN by using the mac and enumerating all available broadcast addresses
 //	@Tags			servers
 //	@Accept			json
 //	@Produce		json
 //	@Param			broadcastWakeRequest	body		BroadcastWakeRequest	true	"Broadcast wake request"
 //	@Success		201						{object}	Response				"Wake on LAN packets successfully sent to all available broadcast addresses"
-//	@Failure		400						{object}	Response
-//	@Failure		500						{object}	Response
+//	@Failure		400						{object}	Response				"Input validation failed"
+//	@Failure		500						{object}	Response				"Wake on LAN packet failed to send"
 //	@Router			/servers/broadcastwake [post]
 func (h *ServerHandler) BroadcastWakeServer(c echo.Context) error {
 	wsRequest := NewBroadcastWakeRequest()
